[project]
name = "dh"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "datasets>=4.3.0",
    "faiss-cpu>=1.12.0",
    "huggingface-hub>=0.35.3",
    "jupyter>=1.1.1",
    "numpy>=2.0.2",
    "openai==2.7.2",
    "pandas>=2.3.3",
    "pillow>=11.3.0",
    "python-dotenv>=1.2.1",
    "ruff>=0.14.4",
    "sentencepiece>=0.2.1",
    "streamlit>=1.50.0",
    "transformers>=4.57.1",
]
